Made a few styling changes

--- a/journal/src/App.css
+++ b/journal/src/App.css
@@ -1,7 +1,11 @@
 * {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
 }
+
+body {
+  background-color: papayawhip;
+}
+
 .App {
   text-align: center;
 }
