--- a/journal/src/Components/Entry.css
+++ b/journal/src/Components/Entry.css
@@ -8,5 +8,9 @@
 
 .Entry-Button {
     width: 100px;
-    height: 50px;
+    height: 100px;
+    border-radius: 5px;
+    color: black;
+    font-size: 15px;
+    background-color: aliceblue;
 }
